#3265 add symptom journal status to case directory, code cleanups